Fixed css stretch

--- a/things/components/Game.css
+++ b/things/components/Game.css
@@ -3,7 +3,6 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
